syntax = "proto3";

package loms;

option go_package = "gitlab.ozon.dev/mlyundin/Homework/loms/pkg/loms;loms";

import "google/protobuf/empty.proto";

service Loms {

  rpc Stocks (StocksRequest) returns (StocksResponse);

  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);

  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse);

  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);

  rpc OrderPayed (OrderPayedRequest) returns (google.protobuf.Empty);
}

message StocksRequest {
	uint32 sku = 1;
}

message StockItem {
	int64 warehouseID = 1;
	uint64 count = 2;     
}

message StocksResponse {
	repeated StockItem stocks = 1;
}

message Item {
	uint32 sku = 1; 
  uint32 count = 2;
}

message CreateOrderRequest {
	int64 user = 1;
  repeated Item items = 2;
}

message CreateOrderResponse {
	int64 orderId = 1;
}

message ListOrderRequest {
  int64 orderId = 1;
}

enum OrderStatus {
  None = 0;
  New = 1;
  AwaitingPayment = 2;
  Failed = 3;
  Payed = 4;
  Cancelled = 5;
}

message ListOrderResponse {
  OrderStatus status = 1;
  int64 user = 2;
  repeated Item items =3;
}

message CancelOrderRequest {
  int64 orderId = 1;
}

message OrderPayedRequest {
  int64 orderId = 1;
}